--- a/app/templates/main/per_category.html
+++ b/app/templates/main/per_category.html
@@ -24,12 +24,15 @@
 {% endfor %}
 {% endif %}
   </div>
-  
 
+{% endblock %}
+
+
+
+{% block pagination %}
 {% if pagination %}
-<div class="pagination">
+<div class="pagination-div">
   {{ macros.pagination_widget(pagination, '.index') }}
 </div>
 {% endif %}
-
 {% endblock %}
