--- a/app/templates/_macros.html
+++ b/app/templates/_macros.html
@@ -1,6 +1,7 @@
 {% macro pagination_widget(pagination, endpoint) %}
 
-<ul class="pagination">
+
+<ul class="pagination justify-content-center">
     {# previous page link #}
     <li{% if not pagination.has_prev %} class="disabled" {% endif %}>
         <a href="{% if pagination.has_prev %}{{ url_for(endpoint, 
@@ -14,6 +15,7 @@
             </li>
             {% else %}
             <li class="disabled"><a href="#">&hellip;</a></li>
+            
             {% endif %}
             {% endfor %}
             {# next page link #}
@@ -23,4 +25,5 @@
                 </li>
 
 </ul>
+
 {% endmacro %}
