--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,38 +1,147 @@
 {% extends 'bootstrap/base.html' %}
 
-<!-- flask-moment -->
+
 {% block scripts%}
 {{ super() }}
+{{ moment.include_jquery() }} 
 {{ moment.include_moment() }}
 {% endblock %}
 
+
 {% block head %}
 {{super()}}
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+
+  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
 {% endblock %}
 
 {% block title %}{{super()}}Freestuff - {% endblock %}
 
+{% block body %}
+
 
 {% block navbar %}
 
-<nav class="navbar navbar-light bg-light">
+
+<nav class="navbar navbar-expand-lg bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand nav-custom" href="{{ url_for('main.index')}}">FreeStuff</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      {% if current_user.is_authenticated %}
+      <h3><span class="navbar-text">
+        Hi! {{current_user.username }}
+      </span></h3>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <!-- <a class="nav-link active" aria-current="page" href="#">Home</a> -->
+          <a class="nav-link" href="{{ url_for('main.check_messages', username=current_user.username)}}">Messages
+            <!-- <span class="sr-only">(current)</span> -->
+            <span class="badge badge-light">{{ current_user.question_received }}</span>
+            <span class="sr-only">unread messages</span>
+            <span class="badge badge-light">{{ current_user.question_answered }}</span>
+            <span class="sr-only">unread messages</span>
+        </a>
+        </li>
+        <li class="nav-item">
+          <!-- <a class="nav-link" href="#">Features</a> -->
+          <a class="nav-link" href="{{ url_for('main.user', username=current_user.username) }}">
+            Profile
+        </a>
+        </li>
+        <li class="nav-item">
+          <!-- <a class="nav-link" href="#">Pricing</a> -->
+          <a class="nav-link" href="{{ url_for('auth.logout') }}">Log Out</a>
+        </li>
+      </ul>
+    
+      {%else%}
+
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('auth.register') }}">Create New Account</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('auth.login') }}">Log In</a>
+      </li>
+      {% endif %}
+        
+      </ul>
+    </div>
+  </div>
+</nav>
+
+
+<!-- 
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand nav-custom" href="{{ url_for('main.index')}}">FreeStuff</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarText">
+
+    <ul class="navbar-nav mr-auto">
+      {% if current_user.is_authenticated %}
+      <li class="nav-item active"> -->
+        <!-- <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> -->
+        <!-- <a class="nav-link" href="{{ url_for('main.check_messages', username=current_user.username)}}">Messages
+          <span class="sr-only">(current)</span>
+          <span class="badge badge-light">{{ current_user.question_received }}</span>
+          <span class="sr-only">unread messages</span>
+          <span class="badge badge-light">{{ current_user.question_answered }}</span>
+          <span class="sr-only">unread messages</span>
+      </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('main.user', username=current_user.username) }}">
+          Profile
+      </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('auth.logout') }}">Log Out</a>
+      </li>
+      </ul>
+      <span class="navbar-text">
+        Hi! {{current_user.username }}
+      </span>
+      {%else%}
+       
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('auth.register') }}">Create New Account</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('auth.login') }}">Log In</a>
+      </li>
+      {% endif %}
+    </ul>
+    
+  </div>
+
+</nav> -->
+
+{#old bootstrap#}
+<!-- <nav class="navbar navbar-dark bg-dark nav1">
     <div class="container-fluid">
       <a class="navbar-brand nav-custom" href="{{ url_for('main.index')}}">FreeStuff</a>
 
 
-      <!-- <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"> -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
           
             {% if current_user.is_authenticated %}
-
-            
             <li class="dropdown">
                    
                 <a href="#" class="dropdown-toggle nav-items" data-toggle="dropdown">
-                    {{current_user.username}} <b class="caret"></b>
+                    {{current_user.username}} 
+                    <b class="caret"></b>
                 </a>
-                <ul class="dropdown-menu">
+                <ul class="dropdown-menu nav-items2">
                     <li>
                         <a href="{{ url_for('main.user', username=current_user.username) }}">
                             Profile
@@ -57,75 +166,113 @@
             {% endif %}
         </ul>
     </div>
-    <!-- </div> -->
-  </nav>
+    </div>
+  </nav> -->
 
 {% endblock %}
 
 
 {% block content %}
 <main>
-<div class = "content-div">
-<div class="container">
-    {% for msg in get_flashed_messages() %}
-        <div class="alert alert-warning">
-            <button type="button" class="done" data-dismiss="alert">&times;</button>
-            {{ msg }}
-        </div>
-        {% endfor %}
-</div>
-
-{% block category %}
-
-<div class="container custom-container">
-                                    
-    <div class="dropdown category-div">
-      <button class="btn btn-dark dropdown-toggle button-custom" type="button" data-toggle="dropdown">Category
-      <span class="caret"></span></button>
-      <ul class="dropdown-menu">
-        <li><a href="{{ url_for('main.home_living') }}">Home & Living</a></li>
-       <li><a href="{{ url_for('main.kitchen') }}">Kitchen</a></li>
-        <li><a href="{{ url_for('main.baby') }}">Baby</a></li>
-        <li><a href="{{ url_for('main.books') }}">Books</a></li>
-        <li><a href="{{ url_for('main.craft') }}">Crafts</a></li>
-        <li><a href="{{ url_for('main.electronics') }}">Electronics</a></li>
-        <li><a href="{{ url_for('main.pets') }}">Pets</a></li>
-        <li><a href="{{ url_for('main.clothing') }}">Clothing</a></li>
-        <li><a href="{{ url_for('main.bathroom') }}">Bathroom</a></li>
-        <li><a href="{{ url_for('main.toys') }}">Toys</a></li>
-        <li><a href="{{ url_for('main.jewellery') }}">Jewellery</a></li>
-      </ul>
+  <div class="content-div">
+    <div class="container">
+      {% for msg in get_flashed_messages() %}
+      <div class="alert alert-warning">
+        <button type="button" class="done" data-dismiss="alert">&times;</button>
+        {{ msg }}
+      </div>
+      {% endfor %}
     </div>
 
-    
-    <form class="d-flex form-div" method="GET" action="{{ url_for('main.search')}}">
-        <div class="seach-field-div">
+    {% block category %}
+
+    <div class="container custom-container">
+      <!-- <div class="category-div col-lg-12 col-md-12">  -->
+
+      <!-- <div class="dropdown dropdown-div">
+        <button class="btn btn-dark dropdown-toggle btn-lg button-custom" type="button" data-toggle="dropdown">Category
+          <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu">
+          <li><a href="{{ url_for('main.home_living') }}">Home & Living</a></li>
+          <li><a href="{{ url_for('main.kitchen') }}">Kitchen</a></li>
+          <li><a href="{{ url_for('main.baby') }}">Baby</a></li>
+          <li><a href="{{ url_for('main.books') }}">Books</a></li>
+          <li><a href="{{ url_for('main.craft') }}">Crafts</a></li>
+          <li><a href="{{ url_for('main.electronics') }}">Electronics</a></li>
+          <li><a href="{{ url_for('main.pets') }}">Pets</a></li>
+          <li><a href="{{ url_for('main.clothing') }}">Clothing</a></li>
+          <li><a href="{{ url_for('main.bathroom') }}">Bathroom</a></li>
+          <li><a href="{{ url_for('main.toys') }}">Toys</a></li>
+          <li><a href="{{ url_for('main.jewellery') }}">Jewellery</a></li>
+        </ul>
+      </div> -->
+
+      <div class="dropdown dropdown-div">
+        <a class="btn btn-secondary dropdown-toggle btn-lg button-custom" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+          Category
+        </a>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+          <li><a class="dropdown-item" href="{{ url_for('main.home_living') }}">Home & Living</a></li>
+          <li><a class="dropdown-item" href="{{ url_for('main.kitchen') }}">Kitchen</a></li>
+          <li><a class="dropdown-item" href="{{ url_for('main.baby') }}">Baby</a></li>
+          <li><a class="dropdown-item" href="{{ url_for('main.books') }}">Books</a></li>
+          <li><a class="dropdown-item" href="{{ url_for('main.craft') }}">Crafts</a></li>
+          <li><a class="dropdown-item" href="{{ url_for('main.electronics') }}">Electronics</a></li>
+          <li><a class="dropdown-item" href="{{ url_for('main.pets') }}">Pets</a></li>
+          <li><a class="dropdown-item" href="{{ url_for('main.clothing') }}">Clothing</a></li>
+          <li><a class="dropdown-item" href="{{ url_for('main.bathroom') }}">Bathroom</a></li>
+          <li><a class="dropdown-item" href="{{ url_for('main.toys') }}">Toys</a></li>
+          <li><a class="dropdown-item" href="{{ url_for('main.jewellery') }}">Jewellery</a></li>
+        </ul>
+      </div>
+
+
+
+
+      <div class="form-div">
+        <form class="d-flex" method="GET" action="{{ url_for('main.search')}}">
+          <div class="seach-field-div">
             <input class="form-control me-2" name="query" type="search" placeholder="Search" aria-label="Search">
-        </div>
-        <div class="search_button"><button class="btn btn-light button-custom" type="submit">Search</button></div>
-      </form>
-    
-    <div class="post-new-item-div">
-      {% if current_user.is_authenticated %}
-      <a href="{{ url_for('main.post_new_item') }}">
-        <button type="button" class="btn btn-dark btn-lg button-custom">Post New Item</button></a>
+          </div>
+          <!-- <div class="search_button"> -->
+          <button class="btn btn-light button-custom btn-lg" type="submit">Search</button>
+          <!-- </div> -->
+        </form>
+      </div>
+      <!-- </div>  -->
+
+      <div class="post-new-item-div">
+        {% if current_user.is_authenticated %}
+        <a href="{{ url_for('main.post_new_item') }}">
+          <button type="button" class="btn btn-dark btn-lg button-custom">Post New Item</button></a>
         {% endif %}
+      </div>
     </div>
+    {% endblock %}
+
+
+
+    {% block page_content %}{% endblock  %}
   </div>
-{% endblock %}
-
-
-
-{% block page_content %}{% endblock  %}
-</div>
 
 
 </main>
-<footer><p>Copyright {{ year }} FreeStuff</p></footer>
+{% block pagination %}{% endblock %}
+<footer>
+  <p>Copyright {{ year }} FreeStuff</p>
+</footer>
+
 
 {% endblock %}
 
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script> 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
 
-
-
-
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+  integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+  integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script> -->
+<!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/JmZQ5stwEULTy" crossorigin="anonymous"></script> -->
+<!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.2.0-beta1/JmZQ5stwEULTy" crossorigin="anonymous"></script> -->
+{% endblock %}
