--- a/app/templates/_posts.html
+++ b/app/templates/_posts.html
@@ -12,7 +12,7 @@
                 <h5 class="card-title">{{ post.title }}</h5>
         </a>
 
-        <p class="card-text"><small class="text-muted">{{ moment(post.timestamp).fromNow() }}</small></p>
+        <p class="card-text"><small class="text-muted test">{{ moment(post.timestamp).fromNow() }}</small></p>
     </div>
 </div>
     
