--- a/app/templates/main/post-new-item.html
+++ b/app/templates/main/post-new-item.html
@@ -16,137 +16,75 @@
     {%- endif %}
 </h1>
 
-<form method="POST" enctype=multipart/form-data class="test">
+<form method="POST" enctype=multipart/form-data>
     <!-- {{ wtf.quick_form(form) }} -->
     {{ form.hidden_tag() }}
     {{ p_form.hidden_tag() }}
     
     <div class="mb-3">
-        <label for="title" class="form-label">Category</label>
-        {{ form.category }}</div>
-
-    <div class="form-group">{{ form.category.label }}{{ form.category }}</div>
-
-
-<!-- dropdown work in progress -->
-<div class="d-flex">
-    <div class="dropdown me-1">
-      <button type="button" class="btn btn-secondary dropdown-toggle" id="dropdownMenuOffset" data-bs-toggle="dropdown" aria-expanded="false" data-bs-offset="10,20">
-        Category
-      </button>
-      <ul class="dropdown-menu" aria-labelledby="dropdownMenuOffset">
-        {{ form.category.HOME_LIVING }}
-        <li><a class="dropdown-item" href="{{ form.category.HOME_LIVING }}">HOME&LIVING</a></li>
-        <li><a class="dropdown-item" href="#">Another action</a></li>
-        <li><a class="dropdown-item" href="#">Something else here</a></li>
-      </ul>
-    </div>
-  </div>
-<!-- end -->
-
+        <!-- <label for="title" class="form-label">Category</label>
+        {{ form.category }}</div> -->
+        {{ form.category.label() }}
+        {{ form.category(class='form-control') }}</div>
 
     <div class="mb-3">
-        <label for="title" class="form-label">Title</label>
-        <input type="text" class="form-control" id="text">
+        <!-- <label for="title" class="form-label">Title</label>
+        <input type="text" class="form-control" id="text"> -->
+        {{ form.title.label() }}
+        {{ form.title(class='form-control')}}
       </div>
 
       <div class="mb-3">
-        <label for="formFile" class="form-label">Default file input example</label>
-        <input class="form-control" type="file" id="formFile">
+        <!-- <label for="formFile" class="form-label">Default file input example</label>
+        <input class="form-control" type="file" id="formFile"> -->
+        {{p_form.photo_one.label()}}
+        {{p_form.photo_one(class="form-control")}}
+
+        {% if p_form.photo_one.errors %}
+        {% for error in p_form.photo_one.errors %}
+        <span class="text-danger">{{ error }}</span><br>
+        {% endfor %}
+        {% endif %}
       </div>
 
       <div class="mb-3">
-        <label for="formFile" class="form-label">Default file input example</label>
-        <input class="form-control" type="file" id="formFile">
+        <!-- <label for="formFile" class="form-label">Default file input example</label>
+        <input class="form-control" type="file" id="formFile"> -->
+        {{p_form.photo_two.label()}}
+        {{p_form.photo_two(class="form-control")}}
+
+        {% if p_form.photo_two.errors %}
+        {% for error in p_form.photo_two.errors %}
+        <span class="text-danger">{{ error }}</span><br>
+        {% endfor %}
+        {% endif %}
       </div>
 
       <div class="mb-3">
-        <label for="formFile" class="form-label">Default file input example</label>
-        <input class="form-control" type="file" id="formFile">
+        <!-- <label for="formFile" class="form-label">Default file input example</label>
+        <input class="form-control" type="file" id="formFile"> -->
+        {{p_form.photo_three.label()}}
+        {{p_form.photo_three(class="form-control")}}
+
+        {% if p_form.photo_three.errors %}
+        {% for error in p_form.photo_three.errors %}
+        <span class="text-danger">{{ error }}</span><br>
+        {% endfor %}
+        {% endif %}
       </div>
 
       <div class="mb-3">
-        <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="6"></textarea>
+        <!-- <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="6"></textarea> -->
+        {{ form.description.label() }}
+        {{ form.description(class='form-control')}}
       </div>
       
-      <button type="submit" class="btn btn-primary">Submit</button>
+      <button type="submit" class="btn btn-primary btn-lg button-custom">Submit</button>
 
-<!-- <div class="form-group">{{ form.category.label }}{{ form.category }}</div>
 
-<div class="form-group">{{ form.title.label }}{{ form.title}}</div> -->
-
-<!-- {{ form.photos.label }}{{ form.photos }} -->
-<!-- <div class="form-group">{{ form.description.label }}{{ form.description }}</div> -->
-
-<!-- <div class="form-group">
-{{p_form.photo_one.label()}}
-{{p_form.photo_one()}}
-</div>
-
-<div class="form-group">
-{{p_form.photo_two.label()}}
-{{p_form.photo_two()}}
-</div>
-
-<div class="form-group">
-{{p_form.photo_three.label()}}
-{{p_form.photo_three()}}
-</div>
-
-<div id="success">
-<div class="form-group">
-{{ form.submit() }}
-</div> -->
 </form>
 <br>
-
-<!-- <ul> 
-    {% for post in posts %}
-
-
-    <li> {# Single composition #}
-    
-            <div class="post-date">{{ moment(post.timestamp).fromNow() }}</div>
-            <div class="post-giver">
-                <a href="{{ url_for('main.user', username=current_user.username) }}">
-                    {{ current_user.username }}
-                </a> 
-            </div>
-            <div class="post-category">
-                {% if post.category == 1 %}
-                <p>Single</p>{% endif %}
-                {% if post.category == 2 %}
-                <p>Extended_Play</p>{% endif %}
-                {% if post.category == 3 %}
-                <p>Album</p>{% endif %}
-                {% if post.category == 3 %}
-                <p>Album</p>{% endif %}
-                {% if post.category == 3 %}
-                <p>Album</p>{% endif %}
-                {% if post.category == 3 %}
-                <p>Album</p>{% endif %}
-                {% if post.category == 3 %}
-                <p>Album</p>{% endif %}
-                {% if post.category == 3 %}
-                <p>Album</p>{% endif %}
-                {% if post.category == 3 %}
-                <p>Album</p>{% endif %}
-                {% if post.category == 3 %}
-                <p>Album</p>{% endif %}
-            
-            </div>
-            <div class="post-title">{{ composition.title }}</div>
-        <div class="post-content">{{ composition.description }}</div>
-    </li>
-    {% endfor %}
-</ul> -->
-<!-- 
-{% if pagination %}
-<div class="pagination">
-    {{ macros.pagination_widget(pagination, ".index") }}
-</div>
-{% endif %} -->
 
 </div>
 {% endblock %}
