--- a/app/templates/main/search.html
+++ b/app/templates/main/search.html
@@ -6,7 +6,7 @@
 {% block title %}{{super()}}Search result for {{keyword}}{% endblock %}
 
 {% block page_content %}
-
+{{ moment.include_moment() }}
 
 <div class="item-div">
   <h1 class="category-title">Search keyword "<strong>{{ keyword }}</strong>". </h1>
@@ -19,7 +19,7 @@
         <img class="card-img-top item-image" src="{{ photos_path }}{{ result.photos }}" alt="{{ result.title }}">
         <div class="card-body">
           <h5 class="card-title">{{ result.title }}</h5></a>
-          <p class="card-text"><small class="text-muted">{{ moment(result.timestamp).fromNow() }}</small></p>
+          <p class="card-text"><small class="text-muted test">{{ moment(result.timestamp).fromNow() }}</small></p>
         </div>
     </div>
     {% endfor %}
