--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -7,8 +7,39 @@
 {% block category %}{% endblock %}
 {% block page_content %}
 <div class="form-div">
-<form class='forms' method="POST">
-    {{ wtf.quick_form(form) }}
+<form class='forms' method="POST" novalidate>
+    <!-- {{ wtf.quick_form(form) }} -->
+    {{ form.hidden_tag() }}
+
+    <div class="mb-3">
+        {{form.email.label}}
+        {{form.email(class="form-control")}}
+
+        {% if form.email.errors %}
+        {% for error in form.email.errors %}
+        <span class="text-danger">{{ error }}</span><br>
+        {% endfor %}
+        {% endif %}
+      </div>
+
+      <div class="mb-3">
+        {{ form.password.label }}
+        {{ form.password(class='form-control')}}
+
+        {% if form.password.errors %}
+        {% for error in form.password.errors %}
+        <span class="text-danger">{{ error }}</span><br>
+        {% endfor %}
+        {% endif %}
+      </div>
+
+      <div class="mb-3">
+        {{ form.remember_me() }}
+        {{ form.remember_me.label }} 
+      </div>
+      
+      <button type="submit" class="btn btn-primary btn-lg button-custom">Login</button>
+
     </form>
 
     <p>New User? <a href="{{ url_for('auth.register')}}">Click here to register</a></p>
