--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -6,10 +6,57 @@
 {% block category %}{% endblock %}
 {% block page_content%}
 <div class="form-div">
-<form class='forms' method="POST">
-{{ wtf.quick_form(form) }}
+<form class='forms' method="POST" novalidate>
+<!-- {{ wtf.quick_form(form) }} -->
+{{ form.hidden_tag() }}
+<div class="mb-3">
+    {{form.email.label}}
+    {{form.email(class="form-control")}}
+
+    {% if form.email.errors %}
+    {% for error in form.email.errors %}
+    <span class="text-danger">{{ error }}</span><br>
+    {% endfor %}
+    {% endif %}
+  </div>
+
+  <div class="mb-3">
+    {{ form.username.label }}
+    {{ form.username(class='form-control')}}
+
+    {% if form.username.errors %}
+    {% for error in form.username.errors %}
+    <span class="text-danger">{{ error }}</span><br>
+    {% endfor %}
+    {% endif %}
+  </div>
+
+  <div class="mb-3">
+    {{ form.password.label }}
+    {{ form.password(class='form-control')}}
+
+    {% if form.password.errors %}
+    {% for error in form.password.errors %}
+    <span class="text-danger">{{ error }}</span><br>
+    {% endfor %}
+    {% endif %}
+  </div>
+
+  <div class="mb-3">
+    {{ form.password_confirm.label }}
+    {{ form.password_confirm(class='form-control')}}
+
+    {% if form.password_confirm.errors %}
+    {% for error in form.password_confirm.errors %}
+    <span class="text-danger">{{ error }}</span><br>
+    {% endfor %}
+    {% endif %}
+  </div>
+  
+  <button type="submit" class="btn btn-primary btn-lg button-custom">Login</button>
 </form>
 </div>
+
 {% endblock  %}
 
 
